Refactor fileSource function and update content

--- a/content/s/test/index/index.mdx
+++ b/content/s/test/index/index.mdx
@@ -2,4 +2,5 @@
 title: test index
 ---
 
-this is a page that slug end with index
+This is a page that slug end with index.  
+With only the index file in this directory, it is regarded as a page file instead of a directory.
