--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,3 +3,6 @@ title: Homepage
 ---
 
 This is home page.
+
+All the pages are generated from content folder, with custom layout and behavior.  
+Check /example folder for more details on custom directory layout.
