--- a/content/index.mdx
+++ b/content/index.mdx
@@ -5,4 +5,4 @@ title: Homepage
 This is home page.
 
 All the pages are generated from content folder, with custom layout and behavior.  
-Check /example folder for more details on custom directory layout.
+Check docs for more details, and example folder for live examples.
