update home page

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,8 +1,7 @@
 ---
-title: Homepage
+title: Kinoana
 ---
 
-This is home page.
+Kinoana is a personal wiki and blog system.
 
-All the pages are generated from content folder, with custom layout and behavior.  
-Check docs for more details, and example folder for live examples.
+It is based on [Next.js](https://nextjs.org/), using Markdown / MDX as source files, and generating website content through the folder structure.
