--- a/content/example/content/file3.mdx
+++ b/content/example/content/file3.mdx
@@ -1,4 +1,4 @@
 Content in file 3 ~
 
 Mdx is also supported.  
-Time visited: {new Date().toString()}.
+Timestamp (Hex): {new Date().getTime().toString(16)}
