add zh archives page

--- a/content/example/archives.mdx
+++ b/content/example/archives.mdx
@@ -1,1 +1,5 @@
-<Archives/>
+This is an archives page, which contains all the posts and sorted by date.
+
+To make an archives page like this, simply add `<Archives />` to the markdown content.
+
+<Archives />
