adjust error page; minor change on zh example

--- a/content/example/archives.mdx
+++ b/content/example/archives.mdx
@@ -1,4 +1,4 @@
-This is an archives page, which contains all the posts and sorted by date.
+This is an archives page, which contains all the posts and sorted by date, and those posts without date will be placed at the end of the list.
 
 To make an archives page like this, simply add `<Archives />` to the markdown content.
 
