--- a/content/zh/example/archives.mdx
+++ b/content/zh/example/archives.mdx
@@ -1,5 +1,8 @@
-This is an archives page, which contains all the posts and sorted by date.
-这是一个归档页面，包含了所有的文章并按日期排序。
+---
+title: 归档
+---
+
+这是一个归档页面，包含了所有的文章并按日期排序。没有日期的文章会被放到最后。
 
 要创建一个像这样的归档页面，在 markdown 内容中添加 `<Archives />` 即可。
 
