add components example

--- a/content/example/components.mdx
+++ b/content/example/components.mdx
@@ -1,1 +1,24 @@
-{icons.md}
+Kinoana provides some components to help you customize your website.
+
+Currently, we provide the following components:
+
+- Link: Next.js Link component.
+- Icon: Some <ExpandableTabs><div title='icons.'>
+pointer: <Icon icon='pointer'/><br/>
+md: <Icon icon='md'/><br/>
+mdx: <Icon icon='mdx'/><br/>
+folder: <Icon icon='folder'/><br/>
+reply: <Icon icon='reply'/></div></ExpandableTabs>
+- Archives: Used to generate archives page, see [here](/example/archives) for example.
+
+Below is an example that uses the Link and Icon components to create a link with an icon to the homepage:
+
+code:
+
+``` tsx
+<Link href='/'><Icon icon='pointer'/> homepage</Link>
+```
+
+output:
+
+<Link href='/'><Icon icon='pointer'/> homepage</Link>
