--- a/content/zh/example/mdx.mdx
+++ b/content/zh/example/mdx.mdx
@@ -4,4 +4,5 @@ title: mdx 示例
 
 MDX 是一种书写格式，允许你在 Markdown 文档中插入 JSX 代码。
 
-访问时间: {new Date().toString()}.
+代码：`{new Date().toString()}`  
+结果: {new Date().toString()}
