--- a/content/example/mdx.mdx
+++ b/content/example/mdx.mdx
@@ -1,3 +1,4 @@
 You can write jsx in mdx.
 
-Time visited: {new Date().toString()}.
+code: `{new Date().toString()}`  
+result: {new Date().toString()}
