Update article list and archives page

--- a/content/example/archives.mdx
+++ b/content/example/archives.mdx
@@ -1,5 +1,6 @@
 This is an archives page, which contains all the posts and sorted by date, and those posts without date will be placed at the end of the list.
 
-To make an archives page like this, simply add `<Archives />` to the markdown content.
+To make an archives page like this, simply add `<Archives />` to the markdown content.  
+By default it will display all the posts, but you can also specify the category by adding `path` attribute, like `<Archives path='example/post' />`.
 
-<Archives />
+<Archives path='example/post' />
