--- a/content/example/components.mdx
+++ b/content/example/components.mdx
@@ -2,13 +2,14 @@ Kinoana provides some components to help you customize your website.
 
 Currently, we provide the following components:
 
-- Link: Next.js Link component.
+- Link: Next.js Link component, use it to navigate between pages in your website.
 - Icon: Some <ExpandableTabs><div title='icons.'>
 pointer: <Icon icon='pointer'/><br/>
 md: <Icon icon='md'/><br/>
 mdx: <Icon icon='mdx'/><br/>
 folder: <Icon icon='folder'/><br/>
 reply: <Icon icon='reply'/></div></ExpandableTabs>
+- ExpandableTabs: A component that allows you to create expandable tabs, like the one above.
 - Archives: Used to generate archives page, see [here](/example/archives) for example.
 
 Below is an example that uses the Link and Icon components to create a link with an icon to the homepage:
