--- a/content/zh/example/components.mdx
+++ b/content/zh/example/components.mdx
@@ -1,15 +1,16 @@
 Kinoana 提供了一些组件用于自定义网站。
 
-目前，我们提供以下组件：
+目前可使用以下组件：
 
-- 链接：Next.js的链接组件，在站点内导航时使用。
-- 图标：一些<ExpandableTabs><div title='图标.'>
-指针：<Icon icon='pointer'/><br/>
-md：<Icon icon='md'/><br/>
-mdx：<Icon icon='mdx'/><br/>
-文件夹：<Icon icon='folder'/><br/>
-回复：<Icon icon='reply'/></div></ExpandableTabs>
-- 归档：用于生成归档页面。示例：[归档](/zh/example/archives)
+- Link：Next.js的链接组件，用于内部链接。
+- Icon：一些<ExpandableTabs><div title='图标'>
+pointer: <Icon icon='pointer'/><br/>
+md: <Icon icon='md'/><br/>
+mdx: <Icon icon='mdx'/><br/>
+folder: <Icon icon='folder'/><br/>
+reply: <Icon icon='reply'/></div></ExpandableTabs>
+- ExpandableTabs：用于展开和折叠标签页，如上面的图标示例。
+- Archives：用于生成归档页面。示例：[归档](/zh/example/archives)
 
 以下是一个使用链接和图标组件创建带有图标的主页链接的示例：
 
